--- a/src/styles/hero.module.scss
+++ b/src/styles/hero.module.scss
@@ -34,6 +34,37 @@
     opacity: 0;
   }
 }
+.row {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+  .img {
+    width: 88%;
+    margin-left: 5vw;
+  }
+}
+.right,
+.left {
+  -ms-flex: 0 0 50%;
+  flex: 0 0 50%;
+  max-width: 50%;
+  position: relative;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+@media screen and (min-width: 769px) {
+  .btnsDiv {
+    display: flex;
+    // .newBtn {
+    //   margin-left: 2vw;
+    // }
+  }
+}
 
 @media screen and (max-width: 1070px) {
   .projSec {
@@ -43,5 +74,55 @@
 @media screen and (max-width: 768px) {
   .projSec {
     grid-template-columns: repeat(1, 1fr) !important;
+  }
+  .row {
+    .img {
+      width: 88%;
+      margin-left: 0;
+    }
+  }
+  .techDiv {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 4vw;
+  }
+  .contactDiv {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 650px) {
+  .title {
+    display: flex;
+    align-items: center !important;
+    justify-content: center;
+    text-align: center;
+  }
+  // .svgImg {
+  //   position: absolute !important;
+  // }
+  // .svgImg svg {
+  //   width: 100% !important;
+  //   height: 100% !important;
+  // }
+  .main {
+    background-image: url("../../public/images/tenor-unscreen.gif");
+    // background-repeat: no-repeat;
+    background-size: 70%;
+    // z-index: 1;
+    // padding-top: 5vw;
+    // &::after {
+    //   content: "";
+    //   position: absolute;
+    //   width: 100%;
+    //   height: 100%;
+    //   z-index: -1;
+    //   top: 0;
+    //   left: 0;
+    //   background: rgba(0, 0, 0, 0.951);
+    // }
   }
 }
