--- a/src/styles/hero.module.scss
+++ b/src/styles/hero.module.scss
@@ -133,3 +133,32 @@
     // }
   }
 }
+
+/*---------------------*/
+.ityped-cursor {
+  font-size: 2.2rem;
+  opacity: 1;
+  -webkit-animation: blink 1s infinite;
+  -moz-animation: blink 1s infinite;
+  animation: blink 1s infinite;
+  animation-direction: alternate;
+  color: #fff;
+}
+
+@keyframes blink {
+  100% {
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes blink {
+  100% {
+    opacity: 0;
+  }
+}
+
+@-moz-keyframes blink {
+  100% {
+    opacity: 0;
+  }
+}
