--- a/src/styles/hero.module.scss
+++ b/src/styles/hero.module.scss
@@ -64,6 +64,9 @@
     //   margin-left: 2vw;
     // }
   }
+  #projects {
+    max-width: 100% !important;
+  }
 }
 
 @media screen and (max-width: 1070px) {
