--- a/src/styles/hero.module.scss
+++ b/src/styles/hero.module.scss
@@ -56,7 +56,9 @@
   padding-right: 15px;
   padding-left: 15px;
 }
-
+.title {
+  margin-top: 5.5vw;
+}
 @media screen and (min-width: 769px) {
   .btnsDiv {
     display: flex;
@@ -102,26 +104,33 @@
     flex: 100%;
     max-width: 100%;
   }
+  .title {
+    margin-top: 15.5vw;
+  }
 }
+
 @media screen and (max-width: 650px) {
   .title {
     display: flex;
     align-items: center !important;
     justify-content: center;
     text-align: center;
+    min-height: 51vw;
   }
 
-  // .svgImg {
-  //   position: absolute !important;
-  // }
-  // .svgImg svg {
-  //   width: 100% !important;
-  //   height: 100% !important;
-  // }
+  .svgImg {
+    position: absolute !important;
+    z-index: -2;
+  }
+
+  .svgImg svg {
+    width: 101vw;
+    z-index: -1;
+  }
   .main {
-    background-image: url("../../public/images/tenor-unscreen.gif");
+    //background-image: url("../../public/images/tenor-unscreen.gif");
     // background-repeat: no-repeat;
-    background-size: 70%;
+    // background-size: 70%;
     // z-index: 1;
     // padding-top: 5vw;
     // &::after {
@@ -137,6 +146,18 @@
   }
 }
 
+@media screen and (max-width: 500px) {
+  .title {
+    display: flex;
+    align-items: center !important;
+    justify-content: center;
+    text-align: center;
+    min-height: 102vw;
+  }
+  .title {
+    margin-top: 35.5vw;
+  }
+}
 /*---------------------*/
 .ityped-cursor {
   font-size: 2.2rem;
