--- a/src/styles/hero.module.scss
+++ b/src/styles/hero.module.scss
@@ -62,7 +62,9 @@
 .title {
   margin-top: 5.5vw;
 }
-
+.newLink {
+  color: #fff !important;
+}
 @media screen and (min-width: 769px) {
   .btnsDiv {
     display: flex;
