--- a/src/styles/hero.module.scss
+++ b/src/styles/hero.module.scss
@@ -76,6 +76,19 @@
     max-width: 100% !important;
   }
   .myImg {
+    display: none;
+    position: absolute;
+    left: 80vw;
+    top: 18vw;
+
+    img {
+      width: 9vw;
+      border-radius: 50%;
+      box-shadow: rgba(125, 15, 153, 0.35) 0px 5px 15px;
+    }
+  }
+  .myImg2 {
+    display: block;
     position: absolute;
     left: 40vw;
     top: 8vw;
@@ -132,6 +145,9 @@
       width: 20vw;
       border-radius: 50%;
     }
+  }
+  .myImg2 {
+    display: none;
   }
 }
 
