--- a/src/styles/hero.module.scss
+++ b/src/styles/hero.module.scss
@@ -90,8 +90,8 @@
   .myImg2 {
     display: block;
     position: absolute;
-    left: 40vw;
-    top: 8vw;
+    right: 21%;
+    top: 36%;
 
     img {
       width: 9vw;
