--- a/src/styles/hero.module.scss
+++ b/src/styles/hero.module.scss
@@ -34,6 +34,10 @@
 //     opacity: 0;
 //   }
 // }
+.blogCard:hover .cardImg {
+  transform: scale(1.2);
+  transition: 0.3s all;
+}
 .row {
   display: -ms-flexbox;
   display: flex;
