--- a/src/styles/hero.module.scss
+++ b/src/styles/hero.module.scss
@@ -34,9 +34,11 @@
 //     opacity: 0;
 //   }
 // }
+.blogCard .cardImg {
+  transition: 0.3s all;
+}
 .blogCard:hover .cardImg {
   transform: scale(1.2);
-  transition: 0.3s all;
 }
 .row {
   display: -ms-flexbox;
