update-working-node20-new-projects

--- a/src/styles/hero.module.scss
+++ b/src/styles/hero.module.scss
@@ -100,9 +100,10 @@
     top: 36%;
 
     img {
-      width: 9vw;
+      width: 11vw;
       border-radius: 50%;
-      box-shadow: rgba(125, 15, 153, 0.35) 0px 5px 15px;
+      border: #8feef5 solid 1px;
+      box-shadow: rgba(210, 99, 238, 0.35) 2px 5px 15px;
     }
   }
 }
